Update rest of use cases
