# apis/rest/v1/openapi.yml
@@ -58,6 +58,13 @@ paths:
           schema:
             type: string
           description: Name of the product
+        - name: searchDate
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
+          description: Search date of the published products
       responses:
         '200':
           description: Ok
